--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "author": "Mustafa Salem <mustafaissasalem@gmail.com>",
   "license": "MIT",
   "private": false,
-  "script": {
+  "scripts": {
     "init": "npm i && npm run prepare && cd client && npm i",
-    "build": "build:types && build:js",
-    "build:js": "esbuild server/index.ts --bundle --platform=node --target=node18-12 --outfile=server.js",
+    "build": "yarn build:types && yarn build:js",
+    "build:js": "esbuild server/index.ts --bundle --platform=node --target=node16 --outfile=server.js",
     "build:types": "tsc --noEmit",
     "test": "cross-env NODE_ENV=test jest --forceExit --detectOpenHandles --runInBand",
     "lint": "cross-env TIMING=1 eslint --ext js,ts server",
     "lint:fix": "cross-env TIMING=1 eslint --ext js,ts --fix server",
-    "dev": "cross-env NODE_ENV=deveopment ts-node-dev --transpile-only server",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "dev": "cross-env NODE_ENV=development ts-node-dev --transpile-only server",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -27,6 +28,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
+    "esbuild": "^0.17.19",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
@@ -41,5 +43,22 @@
     "prettier": "^2.8.8",
     "sequelize": "^6.32.0",
     "sequelize-i18n": "^1.1.0"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
+    "@jest/types": "^29.5.0",
+    "@types/compression": "^1.7.2",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.2",
+    "@types/mocha": "^10.0.1",
+    "@types/morgan": "^1.9.4",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.3"
   }
 }
