fix: edited a typo in the ci file
Changed secret to secrets

Close: #1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,5 +57,5 @@ jobs:
         run: npm run test
         # Environments variables.
         env:
-          DATABASE_TEST: ${{ secret.TEST_DB }}
+          DATABASE_TEST: ${{ secrets.TEST_DB }}
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
