--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "start": "node ./dist",
     "dev": "npx nodemon ./server/server.ts ",
     "lint": "eslint . --ext .ts",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "prepare": "husky install",
-    "pre-commit": "npm run lint"
-
+    "pre-commit": "npm run lint-and-fix"
   },
   "resolutions": {
     "@typescript-eslint/typescript-estree": "^5.59.2",
@@ -44,11 +43,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-typescript": "^0.14.0",
     "express": "^4.18.2",
+    "husky": "^8.0.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "promise": "^8.3.0",
     "ts-node": "^10.9.1",
-    "typescript-eslint": "^0.0.1-alpha.0",
-    "husky": "^8.0.0"
+    "typescript-eslint": "^0.0.1-alpha.0"
   }
 }
