--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,7 @@
         "sourceType": "module"
     },
       "rules": {
-      "@typescript-eslint/no-inferrable-types": "off",
+      "@typescript-eslint/no-inferrable-types": "error",
       "@typescript-eslint/no-explicit-any": "error",
         "prettier/prettier": [
           "error",
