--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "MenuMingle is the graduation project of team 6 from the GazaSkyGeeks Code Academy bootcamp.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "build": "tsc",
+    "start": "node ./dist/",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
-    "dev": "npx nodemon server/index.ts"
+    "dev": "npx nodemon server/index.ts",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -19,13 +22,15 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "jest": "^29.5.0",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.2.5",
+    "@types/node": "^20.2.6",
+    "@types/webpack": "^5.28.1",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
@@ -35,9 +40,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
+    "husky": "^8.0.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
-    "typescript": "^4.0.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.0.0"
   }
 }
