--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,18 +1,82 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: PostgreSQL service to run the Tests
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 jobs:
-  Explore-GitHub-Actions:
+  # Label of the container job
+  container-job:
+    # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
+    # Docker Hub image that `container-job` executes in
+    strategy:
+      matrix:
+        node: [16]
+
+    name: Node ${{ matrix.node }} sample
+
+  # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:13-alpine
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: root123
+          POSTGRES_USER: menumingle_test_user
+          POSTGRES_DB: menumingle_test
+
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+
+      # Downloads a copy of the code in your repository before running CI tests
+
       - name: Check out repository code
+
         uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+
+      - name: Use Node.js
+
+        uses: actions/setup-node@v3
+
+        with:
+
+          node-version: ${{ matrix.node }}
+
+      # Performs a clean installation of all dependencies in the `package.json` file
+
+      # For more information, see https://docs.npmjs.com/cli/ci.html
+
+      - name: Install dependencies
+
+        run: npm i
+
+
+
+
+      - name: Connect to PostgreSQL
+
+        # Runs a script that creates a PostgreSQL table, populates
+
+        # the table with data, and then retrieves the data.
+
+        run: npm run test
+
+        # Environments variables.
+
+        env:
+
+          DATABASE_TEST: ${{ secrets.TEST_DB }}
+
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
