fix: made all request changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
     "eslint.workingDirectories": [
         "client"
     ],
-    "editor.tabSize": 2
+    "editor.tabSize": 2,
+    "files.eol": "\n"
 }
