--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -14,9 +14,10 @@
     
   ],
   "rules": {
+    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
     "react/react-in-jsx-scope": "off",
-    "import/no-unresolved": "off", // !
+    "import/no-unresolved": "off",
     "prettier/prettier": [
       "error",
       {
