--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "sequelize": "^6.32.0",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
