--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "init": "npm i && npm run prepare && cd client && npm i",
-    "test": "cross-env NODE_ENV=test jest --forceExit --detectOpenHandles --runInBand",
+    "test": "NODE_ENV=testing cross-env NODE_ENV=test jest --forceExit --detectOpenHandles --runInBand",
     "build": "npx tsc",
-    "start": "node ./dist/index.js",
+    "start": "NODE_ENV=production node ./dist/index.js",
     "lint": "cross-env eslint . --ext .ts",
     "lint-fix": "cross-env eslint . --ext .ts --fix",
-    "dev": "npx nodemon server/index.ts",
+    "dev": "NODE_ENV=development npx nodemon server/index.ts",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -25,8 +25,12 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.0",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
@@ -49,6 +53,7 @@
     "husky": "^8.0.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
+    "sequelize-cli": "^6.6.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.0.0"
   }
