--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/react-router-dom": "^5.3.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -30,6 +31,7 @@
     "jest": "^29.5.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
+    "react-router-dom": "^6.12.1",
     "sequelize": "^6.32.0",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
