--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "cross-env eslint . --ext .ts",
     "lint-fix": "cross-env eslint . --ext .ts --fix",
     "dev": "cross-env NODE_ENV=development npx nodemon server/index.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "db-build":"cross-env NODE_ENV=development ts-node server/db/build.ts",
+    "seed-build":"cross-env NODE_ENV=development ts-node server/db/seed.ts"
+
   },
   "keywords": [],
   "author": "",
