--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "cross-env eslint . --ext .ts",
     "lint-fix": "cross-env eslint . --ext .ts --fix",
     "dev": "cross-env NODE_ENV=development npx nodemon server/index.ts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "db-build":"cross-env NODE_ENV=development ts-node server/db/build.ts",
+    "seed-build":"cross-env NODE_ENV=development ts-node server/db/seed.ts"
+
   },
   "keywords": [],
   "author": "",
@@ -22,6 +25,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
