--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,9 +1,7 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint", "react", "react-hooks","promise"
-  ],
+  "plugins": ["@typescript-eslint", "react", "react-hooks", "promise"],
   "extends": [
     "airbnb",
     "eslint:recommended",
@@ -11,10 +9,13 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
     "prettier"
-    
   ],
   "rules": {
-    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+    "import/extensions": ["error", "never"],
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "arrow-function" }
+    ],
     "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
@@ -31,6 +32,7 @@
         "endOfLine": "auto"
       }
     ],
-    "generator-star-spacing": "off"
+    "generator-star-spacing": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
