--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.2.9",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
