--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -16,13 +16,19 @@
   "rules": {
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
+    "import/extensions": [
+      "error", {
+        ".tsx": "never",
+        ".json": "never"
+      }
+    ],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
     "prettier/prettier": [
       "error",
       {
         "tabWidth": 2,
-        "printWidth": 80,
+        "printWidth": 90,
         "useTabs": false,
         "semi": true,
         "singleQuote": true,
