--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "lint-fix": "cross-env eslint . --ext .ts --fix",
     "dev": "cross-env NODE_ENV=development npx nodemon server/index.ts",
     "prepare": "husky install",
-    "db-build":"cross-env NODE_ENV=development ts-node server/db/build.ts",
-    "seed-build":"cross-env NODE_ENV=development ts-node server/db/seed.ts"
-
+    "db-build": "cross-env NODE_ENV=development ts-node server/db/build.ts",
+    "seed-build": "cross-env NODE_ENV=development ts-node server/db/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mui/material": "^5.13.5",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
@@ -37,6 +37,7 @@
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0",
+    "styled-components": "^6.0.0-rc.3",
     "typescript-eslint": "^0.0.1-alpha.0"
   },
   "devDependencies": {
