--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -14,6 +14,12 @@
     
   ],
   "rules": {
+    "import/extensions": [
+      "error", {
+        ".tsx": "never",
+        ".json": "never"
+      }
+    ],
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
     "react/react-in-jsx-scope": "off",
