--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pg-hstore": "^2.3.4",
     "react-router-dom": "^6.12.1",
     "sequelize": "^6.32.0",
+    "socket.io": "^4.6.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "typescript-eslint": "^0.0.1-alpha.0"
