--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
   "eslint.workingDirectories": ["client"],
   "editor.tabSize": 2,
   "files.eol": "\n",
-  "cSpell.words": ["marwan"]
+  "cSpell.words": [
+    "marwan",
+    "tanstack"
+  ]
 }
