--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,12 @@
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.5",
+    "@tanstack/react-query": "^4.29.15",
+    "@tanstack/react-query-devtools": "^4.29.15",
     "axios": "^1.4.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
