fix: some issues and ignore package-lock.json relates #59 closes #59

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-DB_URL=yourconnectionstrindb
+DEV_DB_URL=yourconnectionstrindbfordevelopment
+TEST_DB_URL=yourconnectionstrindbfortest
+PRODUCTION_DB_URL=yourconnectionstrindbforproduction
+JWT_SECRET=yourjwtsecret
+PORT=yourport
+nodeEnv=yournodeenv
+
