--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/node": "^20.2.6",
     "@types/supertest": "^2.0.12",
     "@types/webpack": "^5.28.1",
+    "@types/ws": "^8.5.5",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "@typescript-eslint/parser": "^5.59.9",
     "eslint": "^8.42.0",
