--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.13.0",
     "socket.io-client": "^4.7.0"
   },
