--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "@mui/material": "^5.13.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.5",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "@tanstack/react-query": "^4.29.15",
     "@tanstack/react-query-devtools": "^4.29.15",
     "axios": "^1.4.0",
