--- a/client/package.json
+++ b/client/package.json
@@ -26,10 +26,12 @@
     "@tanstack/react-query-devtools": "^4.29.15",
     "axios": "^1.4.0",
     "joi": "^17.9.2",
+    "qr-code-styling": "^1.6.0-rc.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "uuid": "^9.0.0"  },
+    "uuid": "^9.0.0"
+  },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "^18.2.9",
