--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
-    "uuid": "^9.0.0"  },
+    "uuid": "^9.0.0"
+  },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react": "^18.2.9",
