--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "stripe": "^12.11.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
-    "typescript-eslint": "^0.0.1-alpha.0"
+    "typescript-eslint": "^0.0.1-alpha.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
