--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query-devtools": "^4.29.15",
     "axios": "^1.4.0",
     "joi": "^17.9.2",
+    "prop-types": "^15.8.1",
     "qr-code-styling": "^1.6.0-rc.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
