--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "eslint src --ext .ts,.tsx",
     "lint-fix": "eslint src --fix --ext .ts,.tsx",
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "vite"
